Alert und error message für Suchfunktion

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <i class="fas fa-search"></i>
            </button>
        </div>
+       <div id="errorMessage">
+           <p>Search term not found</p>
+       </div>
        <div id="loadingPage">
         <div class="flex"> 
             <img src="json/images/header.png" alt="Artworks">
@@ -47,6 +50,7 @@
       <div id="artworkPage">
     <h2 id="headline"></h2>
     <img id="image">
+    <div id="artist"></div>
     <div id="description"></div>
     <button class="new-btn"> New Artwork</button>
       </div>
