Sound zu color button hinzugefügt

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <div><button class="change-color" >
         <i class="fas fa-tint fa-lg"></i>
+        <audio id="audio" src="http://www.soundjay.com/button/sounds/button-3.mp3"></audio>
         </button>
     </div>
      <div class="container">
