Print function und fix

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <div id="artist"></div>
     <div id="description"></div>
     <button class="new-btn"> New Artwork</button>
+    <button class="print-btn">Print</button>
       </div>
     </div>
       
