--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div><button class="change-color" >
         <i class="fas fa-tint fa-lg"></i>
-        <audio id="audio" src="http://www.soundjay.com/button/sounds/button-3.mp3"></audio>
+        <audio id="audio" src="https://www.soundjay.com/misc/sounds/coin-drop-4.mp3"></audio>
         </button>
     </div>
      <div class="container">
@@ -31,11 +31,11 @@
            </button>
        </div>
        <div id="errorMessage">
-           <p>Search term not found</p>
+           <p>Oh, we couldn´t find anything! Try "Sunflowers" or "Mona Lisa"</p>
        </div>
        <div id="loadingPage">
         <div class="flex"> 
-            <img src="json/images/header.png" alt="Artworks">
+            <img src="images/header.png" alt="Artworks">
         </div>
         <div>
           <div>   
@@ -57,13 +57,9 @@
     <button class="print-btn">Print</button>
       </div>
     </div>
-      
      </div>
      <script defer src="build/bundle.js"></script>
-     <!-- <script src="script.js"></script> -->
    </body>
  </html>
-  <!-- <my-beispiel></my-beispiel>
-    <script defer src="./build/bundle.js"></script>
-    <input type="text" id="myInput" />-->
+ 
 
