Period zu artworkPage hinzugefügt

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <h2 id="headline"></h2>
     <img id="image">
     <div id="artist"></div>
+    <div id="period"></div>
     <div id="description"></div>
     <button class="new-btn"> New Artwork</button>
     <button class="print-btn">Print</button>
